# face3D

./: .gitignore  README.md
SYCaiSheng/: AppDelegate.m  DlibManager.h  DlibManager.mm  DlibWrapper.mm  Info.plist  ViewController.h  ViewController.m
SYCaiSheng.xcodeproj/: project.pbxproj
SYCaiSheng.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SYCaiSheng.xcodeproj/project.xcworkspace/xcuserdata/sunny.xcuserdatad/: UserInterfaceState.xcuserstate
SYCaiSheng.xcodeproj/xcuserdata/sunny.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SYCaiSheng.xcodeproj/xcuserdata/sunny.xcuserdatad/xcschemes/: xcschememanagement.plist
SYCaiSheng/3Dobj/: EyeBlink_L_new.h  FaceGenMTL.h  JawOpen_new.h  SYLoadObj.c  SYLoadObj.h  facegenOBJ.h  jixiangwuOBJ.h  outMTL.h
SYCaiSheng/Render/: SY3DObjView.h  SY3DObjView.m  SYSunnyMovieGLView.h  SYSunnyMovieGLView.m  Shader.fsh  Shader.vsh  Transformations.h  Transformations.m  shaders.h
SYCaiSheng/Res/: facegen.mtl  out.mtl  xiaoyu.txt
SYCaiSheng/Res/ULSFaceTrackerAssets.bundle/: Info.plist  ULStrackerBundle-Info.plist  ulsEar.model
SYCaiSheng/Res/face36/: xiaoyu.txt
SYCaiSheng/ceres/: SYCeresOC.h  SYCeresOC.mm
SYCaiSheng/ceres/include/ceres/: jet.h
SYCaiSheng/ceres/include/ceres/internal/: config.h
SYCaiSheng/ceres/include/glog/: logging.cc
SYCaiSheng/dlib/dlib/: dlib_include_path_tutorial.txt
SYCaiShengTests/: AppDelegate.h  SYCaiShengTests.m  main.m
SYCaiShengUITests/: SYCaiShengUITests.m
ULSMultiTrackeriOSSDK.framework/: ULSMultiTrackeriOSSDK
ULSMultiTrackeriOSSDK.framework/Versions/A/Headers/: ULSMultiTrackeriOSSDK.h
face3D-Android/main/: AndroidManifest.xml
face3D-Android/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  SYCeres.cpp  SYCeres.h  SYJni.cpp  SYLoadObj.cpp  SYLoadObj.h  SYNRender.cpp  SYNRender.h  mLog.h
face3D-Android/main/java/com/camera/: CameraGLSurfaceView.java  DirectDrawer.java
face3D-Android/main/java/com/hl/sunny/panorama_android/: MainActivity.java  SYReviewActivity.java
face3D-Android/main/java/com/vrlib/: SYRender.java  SYSensorHelper.java  SYTouchHelper.java  SunnyGLRender.java  SunnyGLSurfaceView.java  SunnyGLUtils.java
face3D-Android/main/java/com/vrlib/Obj3D/: Model3D.java  SYObjLoader.java
